templates/securitygroup_template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: create security groups for ALB, APPs, and DB.
Metadata:
  Comment: "This is a group project for course INFOSYS 735 group assessment2"
  Owner: "Group 15"
Parameters:
  namePrefix:
    Type: String
    Default: AnyGroup
    Description: Prefix for resource names
  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where the security group will be created
Resources:
  SecurityGroupLoadALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTPS from everywhere
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        #allowing HTTP from anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 # Allow HTTP from anywhere
        #allowing HTTPS from anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0 # Allow HTTPS from anywhere
  SecurityGroupApp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP from ALB SG only
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref SecurityGroupLoadALB # Allow HTTP from Load Balancer SG
  SecurityGroupDb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Oracle from App SG only
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1521
          ToPort: 1521
          SourceSecurityGroupId: !Ref SecurityGroupApp # Allow MySQL/Aurora from App SG
Outputs:
  #export security group IDs for use in other stacks
  LoadBalancerSecurityGroupId:
    Description: Security Group ID for Load Balancer
    Value: !Ref SecurityGroupLoadALB
    Export:
      Name: !Sub "${AWS::StackName}-LoadBalancerSecurityGroupId"
  AppSecurityGroupId:
    Description: Security Group ID for App Servers
    Value: !Ref SecurityGroupApp
    Export:
      Name: !Sub "${AWS::StackName}-AppSecurityGroupId"
  DbSecurityGroupId:
    Description: Security Group ID for Database Servers
    Value: !Ref SecurityGroupDb
    Export:
      Name: !Sub "${AWS::StackName}-DbSecurityGroupId"
